Added text trunctuation

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -66,9 +66,13 @@ body{
 					.title{
 						font-size: 1.8em;
 						margin-top: 10px;
-						text-overflow: ellipsis;
-						white-space: no-wrap;
-						
+						width: 950px;
+
+						h2{
+							white-space: nowrap;	
+							text-overflow: ellipsis;
+							overflow: hidden;
+						}
 
 					}
 					.links{
