--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -133,18 +133,23 @@ body {
 #content .container #photoList .photo .photodata .title {
   font-size: 1.8em;
   margin-top: 10px;
-  text-overflow: ellipsis;
-  white-space: no-wrap;
+  width: 950px;
 }
-/* line 74, ../sass/style.scss */
+/* line 71, ../sass/style.scss */
+#content .container #photoList .photo .photodata .title h2 {
+  white-space: nowrap;
+  text-overflow: ellipsis;
+  overflow: hidden;
+}
+/* line 78, ../sass/style.scss */
 #content .container #photoList .photo .photodata .links {
   margin-top: 20px;
 }
-/* line 77, ../sass/style.scss */
+/* line 81, ../sass/style.scss */
 #content .container #photoList .photo .photodata .links a {
   color: #d94d4d;
 }
-/* line 82, ../sass/style.scss */
+/* line 86, ../sass/style.scss */
 #content .container #photoList .photo .photodata .links * {
   float: left;
   margin-right: 10px;
