Updated detailed page

--- a/js/templates/detailed.html
+++ b/js/templates/detailed.html
@@ -5,6 +5,7 @@
 		<div class="arrowleft"></div>
 		<a href="./" class="back"><p>Back</p></a>
 	</div>
+	<div class="test"></div>
 	<div id="dlinks">
 		<p id="flickrLinks"> {{ detailedPhoto.author }}   |   Published on {{ detailedPhoto.day }} {{ detailedPhoto.month }} {{ detailedPhoto.year }} at {{ detailedPhoto.hour }}:{{ detailedPhoto.minutes }} </p>
 	</div>
@@ -17,6 +18,7 @@
 		</div>
 		<div class="tags"><p>Tags: </p>{{ detailedPhoto.tags }}</div>
 	</div>
+	<div class="test"></div>
 
 
 </div>
