responsiveness detailed view

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -110,6 +110,10 @@ body{
 		font-size: 4em;
 		float: left;
 		max-width: 90%;
+		a{
+			color:  #2f2f2f;
+				
+		}
 		
 	}
 	.button{
@@ -123,6 +127,7 @@ body{
 			border-top: 16px solid transparent;
 			border-bottom: 16px solid transparent;
 			border-right:16px solid #2f2f2f ; 
+			border-radius: 3px;
 			float:left;
 
 			
@@ -135,9 +140,9 @@ body{
 				background-color: #2f2f2f;
 				width: 40px;
 				height: 21px;
-				margin-left: 16px;
+				margin-left: 15px;
 				padding: 5px;
-				border-radius: 1px;
+				border-radius: 3px;
 				
 			}
 			
@@ -150,7 +155,9 @@ body{
 	#dlinks{
 		margin-top: 15px;
 		#flickrLinks{
-			
+			a{
+				color:  #2f2f2f;
+			}
 		}
 		
 	}
@@ -215,6 +222,12 @@ body{
 	}	
 
 }
+
+//DetailedView
+.dcontainer{
+	max-width:95%!important;
+	
+}
 }
 @media only screen and (max-width: 800px) {
 	#content{
@@ -235,8 +248,14 @@ body{
 					}
 				}
 			}
+			.dheader{
+				font-size: 3em;
+				max-width:75%;
+			}
 		}	
 	}
+	
+	
 }
 @media only screen and (max-width: 580px) {
 	#content{
