--- a/js/templates/detailed.html
+++ b/js/templates/detailed.html
@@ -1,13 +1,13 @@
 <div class="container dcontainer">
 
-	<h1 class="dheader"> {{ detailedPhoto.title }} </h1>
+	<h1 class="dheader"> <a href="{{ detailedPhoto.link }}" target="_blank">{{ detailedPhoto.title }}</a> </h1>
 	<div class="button">
 		<div class="arrowleft"></div>
 		<a href="./" class="back"><p>Back</p></a>
 	</div>
 	<div class="test"></div>
 	<div id="dlinks">
-		<p id="flickrLinks"> {{ detailedPhoto.author }}   |   Published on {{ detailedPhoto.day }} {{ detailedPhoto.month }} {{ detailedPhoto.year }} at {{ detailedPhoto.hour }}:{{ detailedPhoto.minutes }} </p>
+		<p id="flickrLinks"> <a href="{{ detailedPhoto.authorLink }}" target="_blank">{{ detailedPhoto.author }}</a>   |   Published on {{ detailedPhoto.day }} {{ detailedPhoto.month }} {{ detailedPhoto.year }} at {{ detailedPhoto.hour }}:{{ detailedPhoto.minutes }} </p>
 	</div>
 	<div class="photoContent">
 		<div class="dphoto">
