--- a/js/templates/list.html
+++ b/js/templates/list.html
@@ -3,7 +3,7 @@
 		<div id="photoList">
 			<section class="photo" ng-repeat="p in pictures.items | tagFilter:filterText:items.tags">		
 				<div class="image">
-					<a href="#/detailed/{{ p.id }}"><img src="{{ p.media.m }}"></a>
+					<a href="#/detailed/{{ p.id }}"><img ng-src="{{ p.media.m }}"></a>
 				</div>				
 				<div class="photodata">
 					<div class="title">
