cleaned up some bits

--- a/js/templates/detailed.html
+++ b/js/templates/detailed.html
@@ -1,5 +1,4 @@
 <div class="container dcontainer">
-
 	<h1 class="dheader"> <a href="{{ detailedPhoto.link }}" target="_blank">{{ detailedPhoto.title }}</a> </h1>
 	<div class="button">
 		<div class="arrowleft"></div>
@@ -13,9 +12,7 @@
 		<div class="dphoto">
 			<img src="{{ detailedPhoto.media.m }}">
 		</div>
-		<div class="description">
-			
-		</div>
+		<div class="description"></div>
 		<div class="tags"><p>Tags: </p>{{ detailedPhoto.tags }}</div>
 	</div>
 	<div class="test"></div>
