--- a/sass/style.scss
+++ b/sass/style.scss
@@ -74,6 +74,10 @@ body{
 							white-space: nowrap;	
 							text-overflow: ellipsis;
 							overflow: hidden;
+							
+							a{
+								color: #2f2f2f;
+							}
 						}
 
 
