--- a/js/templates/list.html
+++ b/js/templates/list.html
@@ -7,7 +7,7 @@
 				</div>				
 				<div class="photodata">
 					<div class="title">
-						<h2>{{ p.title }}</h2>
+						<h2><a href="#/detailed/{{ p.id }}">{{ p.title }}</a></h2>
 					</div>
 					<div class="links">
 						<a href="{{ p.authorLink }}" title="Author" target="_blank">{{ p.author }}</a>
